@@ -1,3 +1,9 @@
+2005-08-26 Borut Razem <borut.razem AT siol.net>
+
+	* emu/rrgb/Makefile: install --strip changed to 2 steps:
+	  install and strip, since the strip at /usr/ccs/bin should be used
+	  on solaris
+
 2005-08-20 Borut Razem <borut.razem AT siol.net>
 
 	* emu/rrgb/Makefile: link with libsocket in case of sparc-solaris
